--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,5 @@ services:
     ports:
       - "5999:5999"
     env_file:
-      - ./kafka-consumer/.env      # ✅ 네가 말한 실제 경로 반영!
+      - .env      # ✅ 네가 말한 실제 경로 반영!
     restart: unless-stopped
